pkg/ibmvpc/examples/out/explain_out/multiNIsToSingleNI_all_vpcs_explain_debug.txt
Explaining connectivity from vsi3-ky to vsi1-ky within test-vpc1-ky
===================================================================

Connections from vsi3-ky[10.240.20.5] to vsi1-ky[10.240.10.5]: All Connections

Path:
	vsi3-ky[10.240.20.5] -> security group sg2-ky -> subnet2-ky -> network ACL acl1-ky -> 
	network ACL acl1-ky -> subnet1-ky -> security group sg1-ky -> vsi1-ky[10.240.10.5]


Details:
~~~~~~~~
Path is enabled; The relevant rules are:
	Egress:
		security group sg2-ky allows connection with the following allow rules
			index: 1, direction: outbound,  conns: protocol: all, remote: 10.240.10.0/24, local: 0.0.0.0/0
		network ACL acl1-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

	Ingress:
		network ACL acl1-ky allows connection with the following allow rules
			index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
		security group sg1-ky allows connection with the following allow rules
			index: 3, direction: inbound,  conns: protocol: all, remote: sg2-ky (10.240.20.4/31), local: 0.0.0.0/0

TCP response is enabled; The relevant rules are:
	Egress:
		network ACL acl1-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

	Ingress:
		network ACL acl1-ky allows connection with the following allow rules
			index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

------------------------------------------------------------------------------------------------------------------------

No connections from from vsi3-ky[10.240.10.4] to vsi1-ky[10.240.10.5];
connection is blocked by egress

Egress: security group sg1-ky blocks connection
Ingress: security group sg1-ky allows connection

Path:
	vsi3-ky[10.240.10.4] -> |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Egress:
		security group sg1-ky blocks connection since there are no relevant allow rules

	Ingress:
		security group sg1-ky allows connection with the following allow rules
			index: 2, direction: inbound,  conns: protocol: all, remote: sg1-ky (10.240.10.4/31), local: 0.0.0.0/0

------------------------------------------------------------------------------------------------------------------------
